# chicaiza_venta_motos

./: .env  README.md  Venta Motos API.postman_collection.json  db.sqlite3  main.py  pyproject.toml  venta-motos.thunder_collection.json
config/: settings.py  urls.py
moto/: admin.py  filters.py  pagination.py  permissions.py  urls.py
moto/migrations/: 0001_initial.py
moto/models/: __init__.py  cliente.py  detalle_venta.py  moto.py  vendedor.py  venta.py
moto/serializers/: __init__.py  auth.py  cliente.py  detalle_venta.py  moto.py  user.py  vendedor.py  venta.py
moto/tests/: helpers.py  test_auth.py  test_clientes.py  test_detalle_ventas.py  test_motos.py  test_users.py  test_vendedores.py  test_ventas.py
moto/views/: auth.py  cliente.py  detalle_venta.py  health.py  moto.py  user.py  vendedor.py  venta.py
