[project]
name = "venta-motos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.14",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
]
